--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,15 @@
 {
   "development": {
+    "username": "postgres",
+    "password": "postgres",
     "database": "jukebox",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "operatorsAliases": "false"
   },
   "test": {
+    "username": "postgres",
+    "password": "postgres",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
