--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
