--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
