--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
+    "node-spotify-api": "^1.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0",
+    "socket.io": "^2.2.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
