--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "userapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +25,16 @@
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0",
     "spotify-web-api-node": "^4.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hayeun7777/jukebox.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/hayeun7777/jukebox/issues"
+  },
+  "homepage": "https://github.com/hayeun7777/jukebox#readme",
+  "description": ""
 }
