--- a/config/config.json
+++ b/config/config.json
@@ -10,13 +10,11 @@
   "test": {
     "username": "postgres",
     "password": "postgres",
-    "database": "database_test",
+    "database": "jukebox",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
