--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
     "socket.io": "^2.2.0",
     "spotify-web-api-node": "^4.0.0"
   },
