--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-spotify-api": "^1.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-spotify": "^1.0.1",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0",
